fixing overflow on buttons inside ODS tag

--- a/src/App.css
+++ b/src/App.css
@@ -256,7 +256,7 @@
 
 #tag__avatar {
   background-color: rgb(76, 159, 56);
-  margin-left: 10px;
+  margin: 5px;
   height: 34px;
   width: 34px;
 }
